added and deleted some images + start activity page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </div>
         </section>
 
+        <section id="activites" class="content-section text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 service-spacer">
+                        <h2>Activities</h2>
+                    </div><!--end col lg 12-->
+                </div><!--end row-->
+                <div class="row">
+                    <div class="col-lg-4 col-md-4">
+                        <i class="fa fa-briefcase icon"></i>
+                        <h3>No W*rk talk</h3>
+                        <p>We want you to have the freedom to be yourself, not your job or your career. This is not a networking conference. This is your chance to get to know people for who they really are and build relationships with people you can truly call your friend .</p>
+                    </div><!--end col lg 4 col md 4-->
+
+                    <div class="col-lg-4 col-md-4">
+                        <i class="fa fa-mobile-phone icon icon-phone"></i>
+                        <h3>No Technology</h3>
+                        <p>No screens here. “Check in” your phone to “check out” at camp. Step foot into an environment that is device and technology free-a chance to live in the moment.  </p>
+                    </div><!--end col lg 4 col md 4-->
+                    <div class="col-lg-4 col-md-4">
+                        <i class="fa fa-exclamation-triangle icon"></i>
+                        <h3>No Stress</h3>
+                        <p>Simply having fun requires zero stress. Our goal is to sponsor a stress-free environment to help you get the most benefit out of a tech-free weekend. The only status update you need is that you will be “off the grid.” </p>
+                    </div><!--end col lg 4 col md 4-->
+                </div><!--end row-->
+                <div><a href="#newsletter">Sign up for more information</a></div>
+            </div> <!--end container-->
+        </section><!-- end features section -->
+
         <section id="first-newsletter" class="content-section text-center">
                 <div class="container">
                     <div class="row">
