--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <span class="bar animated fadeIn delay2"></span>
                             <p class="intro-text animated bounceInUp delay2">A weekend getaway off the grid and free from technology. <br />Ready to unplug?</p>
                             <div class="page-scroll animated fadeIn delay25">
-                                <a href="#features" class="btn btn-circle animated pulse delay3">
+                                <a href="#activities" class="btn btn-circle animated pulse delay3">
                                     <i class="fa fa-angle-double-down"></i>
                                 </a>
                             </div>
@@ -43,7 +43,7 @@
             </div>
         </section>
 
-        <section id="activites" class="content-section text-center">
+        <section id="activities" class="content-section text-center">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 service-spacer">
@@ -51,26 +51,63 @@
                     </div><!--end col lg 12-->
                 </div><!--end row-->
                 <div class="row">
-                    <div class="col-lg-4 col-md-4">
-                        <i class="fa fa-briefcase icon"></i>
-                        <h3>No W*rk talk</h3>
-                        <p>We want you to have the freedom to be yourself, not your job or your career. This is not a networking conference. This is your chance to get to know people for who they really are and build relationships with people you can truly call your friend .</p>
+                    <div class="col-lg-2 col-md-2">
+                        <h4>Archery</h4>
+                        <img src="images/photos/Archery/stock-photo-9399478-target-sports.jpg" />
                     </div><!--end col lg 4 col md 4-->
-
-                    <div class="col-lg-4 col-md-4">
-                        <i class="fa fa-mobile-phone icon icon-phone"></i>
-                        <h3>No Technology</h3>
-                        <p>No screens here. “Check in” your phone to “check out” at camp. Step foot into an environment that is device and technology free-a chance to live in the moment.  </p>
+                    <div class="col-lg-2 col-md-2">
+                        <h4>Dutch Cooking</h4>
+                        <img src="images/photos/Dutch_Oven_Cooking/stock-photo-20440738-cooking-in-the-wilderness.jpg" />
                     </div><!--end col lg 4 col md 4-->
-                    <div class="col-lg-4 col-md-4">
-                        <i class="fa fa-exclamation-triangle icon"></i>
-                        <h3>No Stress</h3>
-                        <p>Simply having fun requires zero stress. Our goal is to sponsor a stress-free environment to help you get the most benefit out of a tech-free weekend. The only status update you need is that you will be “off the grid.” </p>
+                     <div class="col-lg-2 col-md-2">
+                         <h4>Free Time</h4>
+                        <img src="images/photos/Free_Time/stock-photo-22291149-man-relaxing-in-hammock.jpg" />
+                    </div><!--end col lg 4 col md 4-->
+                     <div class="col-lg-2 col-md-2">
+                        <h4>Jam Sessions</h4>
+                        <img src="images/photos/Jam_Sessions/stock-photo-14327628-guitarist.jpg" />
+                    </div><!--end col lg 4 col md 4-->
+                     <div class="col-lg-2 col-md-2">
+                        <h4>Painting</h4>
+                        <img src="images/photos/Painting/stock-photo-18332611-palette-and-brushes-background.jpg" />
+                    </div><!--end col lg 4 col md 4-->
+                     <div class="col-lg-2 col-md-2">
+                        <h4>Old Flames</h4>
+                        <img src="images/photos/Rekindling_Old_Flames/stock-photo-16133981-couple-hiking-in-the-woods.jpg" />
                     </div><!--end col lg 4 col md 4-->
                 </div><!--end row-->
-                <div><a href="#newsletter">Sign up for more information</a></div>
+                <div class="row" style="margin-top: 20px;">
+                    <div class="col-lg-2 col-md-2">
+                        <h4>Rock Climbing</h4>
+                        <img src="images/photos/Rock_Climbing_Wall/stock-photo-2824798-climber-on-the-wood-climbing-wall-in-amusement-park.jpg" />
+                    </div><!--end col lg 4 col md 4-->
+                    <div class="col-lg-2 col-md-2">
+                        <h4>S'Mores</h4>
+                        <img src="images/photos/SMores/stock-photo-9636168-roasting-marshmallows.jpg" />
+                    </div><!--end col lg 4 col md 4-->
+                     <div class="col-lg-2 col-md-2">
+                        <h4>Sports</h4>
+                        <img src="images/photos/SMores/stock-photo-9636168-roasting-marshmallows.jpg" />
+                    </div><!--end col lg 4 col md 4-->
+                     <div class="col-lg-2 col-md-2">
+                        <h4>Star Gazing</h4>
+                        <img src="images/photos/Star_Gazing/stock-photo-8233145-stellar-space-galaxy.jpg" />
+                    </div><!--end col lg 4 col md 4-->
+                     <div class="col-lg-2 col-md-2">
+                        <h4>Yoga</h4>
+                        <img src="images/photos/Yoga/stock-photo-9868188-two-women-at-a-park-in-yoga-pose.jpg" />
+                    </div><!--end col lg 4 col md 4-->
+                     <div class="col-lg-2 col-md-2">
+                        <h4>Meditating</h4>
+                        <img src="images/photos/Yoga/stock-photo-9910758-meditating.jpg" />
+                    </div><!--end col lg 4 col md 4-->
+                </div><!--end row-->
             </div> <!--end container-->
         </section><!-- end features section -->
+
+        <div class="container text-center">
+            <i class="fa fa-caret-down arrow-grey"></i>
+        </div><!--end container-->
 
         <section id="first-newsletter" class="content-section text-center">
                 <div class="container">
@@ -99,6 +136,10 @@
                 </div><!-- container -->
         </section><!--end newsletter-->
 
+        <div class="container text-center">
+            <i class="fa fa-caret-down arrow-white"></i>
+        </div><!--end container-->
+
         <section id="features" class="content-section text-center">
             <div class="container">
                 <div class="row">
@@ -109,7 +150,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-4">
                         <i class="fa fa-briefcase icon"></i>
-                        <h3>No W*rk talk</h3>
+                        <h3 class="title-features">No W*rk talk</h3>
                         <p>We want you to have the freedom to be yourself, not your job or your career. This is not a networking conference. This is your chance to get to know people for who they really are and build relationships with people you can truly call your friend .</p>
                     </div><!--end col lg 4 col md 4-->
 
@@ -124,7 +165,6 @@
                         <p>Simply having fun requires zero stress. Our goal is to sponsor a stress-free environment to help you get the most benefit out of a tech-free weekend. The only status update you need is that you will be “off the grid.” </p>
                     </div><!--end col lg 4 col md 4-->
                 </div><!--end row-->
-                <div><a href="#newsletter">Sign up for more information</a></div>
             </div> <!--end container-->
         </section><!-- end features section -->
 
@@ -249,7 +289,6 @@
                     </div><!--end col lg 4 col md 4-->
                 </div><!--end row-->
                 <br /><br />
-                <div><a href="#newsletter">Sign up for more information</a></div>
             </div>
         </section>
 
