--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <link href="css/font-awesome.min.css" rel="stylesheet" media="screen">
         <link href="css/animate.css" rel="stylesheet" media="screen">
         <link href="css/horizon.css" rel="stylesheet">
+        <link href="fonts/adventurefont/adventurecss.css" rel="stylesheet">
     </head>
 
     <body id="page-top">
@@ -73,7 +74,7 @@
                     </div><!--end col lg 4 col md 4-->
                      <div class="col-lg-2 col-md-2">
                         <h4>Old Flames</h4>
-                        <img src="images/photos/Rekindling_Old_Flames/stock-photo-16133981-couple-hiking-in-the-woods.jpg" />
+                        <img src="images/photos/Rekindling_Old_Flames/stock-photo-37275270-walking-in-the-park-together.jpg" />
                     </div><!--end col lg 4 col md 4-->
                 </div><!--end row-->
                 <div class="row" style="margin-top: 20px;">
@@ -334,6 +335,29 @@
             </div><!--container -->
         </section><!--end footer section-->
 
+        <!-- ribbon -->
+            <img src="images/ribbon.gif" border="0" width="150" height="150" style="position:absolute; right:0px; top:0px; margin:0px; padding:0px" class="ribbon" data-toggle="modal" data-target="#myModal">
+        <!-- end ribbon -->
+
+        <!-- modal -->
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">Camp Unplugg'd Talent Form</h4>
+                  </div>
+                  <div class="modal-body">
+
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+        <!-- end modal -->
+
         <!-- Core JavaScript Files -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
@@ -345,7 +369,5 @@
                 $('.morequestionsdiv').show();
             });
         </script>
-        <script>
-        document.write('<a href="talent.html" target="POPUPW"><img src="http://quickribbon.com/ribbon/2014/04/1d23144f6085a6e6e507684f49415c99.gif" border="0" width="150" height="150" style="position:absolute; right:0px; top:0px; margin:0px; padding:0px"></a>')</script>
     </body>
 </html>
