--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <link href="css/font-awesome.min.css" rel="stylesheet" media="screen">
         <link href="css/animate.css" rel="stylesheet" media="screen">
         <link href="css/horizon.css" rel="stylesheet">
+        <link href="css/form.css" rel="stylesheet">
         <link href="fonts/adventurefont/adventurecss.css" rel="stylesheet">
     </head>
 
@@ -53,12 +54,12 @@
                 </div><!--end row-->
                 <div class="row">
                     <div class="col-lg-2 col-md-2">
-                        <h4>Archery</h4>
-                        <img src="images/photos/Archery/stock-photo-9399478-target-sports.jpg" />
+                        <h4>Canoeing</h4>
+                        <img src="images/finals/canoeing.jpg" />
                     </div><!--end col lg 4 col md 4-->
                     <div class="col-lg-2 col-md-2">
-                        <h4>Dutch Cooking</h4>
-                        <img src="images/photos/Dutch_Oven_Cooking/stock-photo-20440738-cooking-in-the-wilderness.jpg" />
+                        <h4>Tie Dye</h4>
+                        <img src="images/finals/iStock_000022807639Small.jpg" />
                     </div><!--end col lg 4 col md 4-->
                      <div class="col-lg-2 col-md-2">
                          <h4>Free Time</h4>
@@ -66,11 +67,11 @@
                     </div><!--end col lg 4 col md 4-->
                      <div class="col-lg-2 col-md-2">
                         <h4>Jam Sessions</h4>
-                        <img src="images/photos/Jam_Sessions/stock-photo-14327628-guitarist.jpg" />
+                        <img src="images/finals/iStock_000014327628Small.jpg" />
                     </div><!--end col lg 4 col md 4-->
                      <div class="col-lg-2 col-md-2">
                         <h4>Painting</h4>
-                        <img src="images/photos/Painting/stock-photo-18332611-palette-and-brushes-background.jpg" />
+                        <img src="images/finals/painting.jpg" />
                     </div><!--end col lg 4 col md 4-->
                      <div class="col-lg-2 col-md-2">
                         <h4>Old Flames</h4>
@@ -171,6 +172,28 @@
 
         <div class="container text-center">
             <i class="fa fa-caret-down arrow-grey"></i>
+        </div><!--end container-->
+
+         <section id="cabins" class="content-section text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 service-spacer">
+                        <h2>Cabins</h2>
+                    </div><!--end col lg 12-->
+                </div><!--end row-->
+                <div class="row">
+                    <div class="col-lg-4 col-md-4">
+                    </div><!--end col lg 4 col md 4-->
+                    <div class="col-lg-4 col-md-4">
+                    </div><!--end col lg 4 col md 4-->
+                    <div class="col-lg-4 col-md-4">
+                    </div><!--end col lg 4 col md 4-->
+                </div><!--end row-->
+            </div> <!--end container-->
+        </section><!-- end features section -->
+
+        <div class="container text-center">
+            <i class="fa fa-caret-down arrow-white"></i>
         </div><!--end container-->
 
         <section id="faq" class="content-section text-center">
@@ -294,7 +317,7 @@
         </section>
 
         <div class="container text-center">
-            <i class="fa fa-caret-down arrow-white"></i>
+            <i class="fa fa-caret-down arrow-grey"></i>
         </div><!--end container-->
 
         <section id="newsletter" class="content-section text-center">
@@ -349,12 +372,12 @@
                   </div>
                   <div class="modal-body">
                     <!-- Begin MailChimp Signup Form -->
-<link href="http://cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
 <style type="text/css">
-    #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+    #mc_embed_signup2{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
     /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
        We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
+<div id="mc_embed_signup2">
 <div id="mc_embed_signup">
 <form action="http://tumblr.us6.list-manage1.com/subscribe/post?u=d09d7dd782fea7ba3ce7884b5&amp;id=f9acc06fe1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
@@ -414,8 +437,9 @@
         <div class="response" id="mce-success-response" style="display:none"></div>
     </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;"><input type="text" name="b_d09d7dd782fea7ba3ce7884b5_f9acc06fe1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button mc-embedded-subscribe"></div>
 </form>
+</div>
 </div>
 <script type="text/javascript">
 var fnames = new Array();var ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[3]='MMERGE3';ftypes[3]='phone';fnames[4]='MMERGE4';ftypes[4]='text';fnames[5]='MMERGE5';ftypes[5]='radio';fnames[6]='MMERGE6';ftypes[6]='radio';fnames[7]='MMERGE7';ftypes[7]='radio';
