buy stock photos and delete

--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
                 </div><!--end row-->
                 <div class="row">
                     <div class="col-lg-2 col-md-2">
-                        <h4>Canoeing</h4>
-                        <img src="images/finals/canoeing.jpg" />
+                        <h4>Archery</h4>
+                        <img src="images/finals/archery.jpg" />
                     </div><!--end col lg 4 col md 4-->
                     <div class="col-lg-2 col-md-2">
-                        <h4>Tie Dye</h4>
-                        <img src="images/finals/iStock_000022807639Small.jpg" />
+                        <h4>Ziplining</h4>
+                        <img src="images/finals/ziplining.jpg" width=151px; />
                     </div><!--end col lg 4 col md 4-->
                      <div class="col-lg-2 col-md-2">
                          <h4>Free Time</h4>
-                        <img src="images/photos/Free_Time/stock-photo-22291149-man-relaxing-in-hammock.jpg" />
+                        <img src="images/finals/freetime.jpg" />
                     </div><!--end col lg 4 col md 4-->
                      <div class="col-lg-2 col-md-2">
                         <h4>Jam Sessions</h4>
@@ -73,37 +73,64 @@
                         <h4>Painting</h4>
                         <img src="images/finals/painting.jpg" />
                     </div><!--end col lg 4 col md 4-->
-                     <div class="col-lg-2 col-md-2">
-                        <h4>Old Flames</h4>
-                        <img src="images/photos/Rekindling_Old_Flames/stock-photo-37275270-walking-in-the-park-together.jpg" />
+                    <div class="col-lg-2 col-md-2">
+                        <h4>Canoeing</h4>
+                        <img src="images/finals/canoeing.jpg" />
                     </div><!--end col lg 4 col md 4-->
                 </div><!--end row-->
                 <div class="row" style="margin-top: 20px;">
                     <div class="col-lg-2 col-md-2">
                         <h4>Rock Climbing</h4>
-                        <img src="images/photos/Rock_Climbing_Wall/stock-photo-2824798-climber-on-the-wood-climbing-wall-in-amusement-park.jpg" />
+                        <img src="images/finals/rockclimbing.jpg" />
                     </div><!--end col lg 4 col md 4-->
                     <div class="col-lg-2 col-md-2">
                         <h4>S'Mores</h4>
-                        <img src="images/photos/SMores/stock-photo-9636168-roasting-marshmallows.jpg" />
+                        <img src="images/finals/smores.jpg" />
                     </div><!--end col lg 4 col md 4-->
                      <div class="col-lg-2 col-md-2">
                         <h4>Sports</h4>
-                        <img src="images/photos/SMores/stock-photo-9636168-roasting-marshmallows.jpg" />
+                        <img src="images/finals/sports.jpg" />
                     </div><!--end col lg 4 col md 4-->
                      <div class="col-lg-2 col-md-2">
                         <h4>Star Gazing</h4>
-                        <img src="images/photos/Star_Gazing/stock-photo-8233145-stellar-space-galaxy.jpg" />
+                        <img src="images/finals/stargazing.jpg" />
                     </div><!--end col lg 4 col md 4-->
                      <div class="col-lg-2 col-md-2">
                         <h4>Yoga</h4>
-                        <img src="images/photos/Yoga/stock-photo-9868188-two-women-at-a-park-in-yoga-pose.jpg" />
+                        <img src="images/finals/yoga.jpg" />
                     </div><!--end col lg 4 col md 4-->
                      <div class="col-lg-2 col-md-2">
-                        <h4>Meditating</h4>
-                        <img src="images/photos/Yoga/stock-photo-9910758-meditating.jpg" />
+                        <h4>Meditation</h4>
+                        <img src="images/finals/Meditation.jpg" />
                     </div><!--end col lg 4 col md 4-->
                 </div><!--end row-->
+                <div class="row" style="margin-top: 20px;">
+                    <div class="col-lg-2 col-md-2">
+                        <h4>Horseback Riding</h4>
+                        <img src="images/finals/horsebackriding.jpg" width=151px;/>
+                    </div><!--end col lg 4 col md 4-->
+                    <div class="col-lg-2 col-md-2">
+                        <h4>Creative Writing</h4>
+                        <img src="images/finals/creative_writing.jpg" />
+                    </div><!--end col lg 4 col md 4-->
+                     <div class="col-lg-2 col-md-2">
+                        <h4>Dutch Oven</h4>
+                        <img src="images/finals/dutchovencooking.jpg" />
+                    </div><!--end col lg 4 col md 4-->
+                     <div class="col-lg-2 col-md-2">
+                        <h4>Campfires</h4>
+                        <img src="images/finals/campfire.jpg" width=151px;/>
+                    </div><!--end col lg 4 col md 4-->
+                     <div class="col-lg-2 col-md-2">
+                        <h4>Tie Dye</h4>
+                        <img src="images/finals/iStock_000022807639Small.jpg" />
+                    </div><!--end col lg 4 col md 4-->
+                     <div class="col-lg-2 col-md-2">
+                        <h4>Improv Classes</h4>
+                        <img src="images/finals/improv.jpg" />
+                    </div><!--end col lg 4 col md 4-->
+                </div><!--end row-->
+                <div style="margin-top:40px; font-size:26px;">and much more!</div>
             </div> <!--end container-->
         </section><!-- end features section -->
 
@@ -182,11 +209,21 @@
                     </div><!--end col lg 12-->
                 </div><!--end row-->
                 <div class="row">
-                    <div class="col-lg-4 col-md-4">
+                    <div class="col-lg-3 col-md-3" style="margin-right:20px;">
+                        <a href="images/finals/Treehouse.jpg">
+                            <img src="images/finals/Treehouse.jpg" />
+                        </a>
                     </div><!--end col lg 4 col md 4-->
-                    <div class="col-lg-4 col-md-4">
+                    <div class="col-lg-3 col-md-3">
+                        <a href="images/finals/DSC_0066.jpg">
+                            <img src="images/finals/DSC_0066.jpg" />
+                        </a>
                     </div><!--end col lg 4 col md 4-->
-                    <div class="col-lg-4 col-md-4">
+                    <div class="col-lg-3 col-md-3">
+                    photo
+                    </div><!--end col lg 4 col md 4-->
+                    <div class="col-lg-3 col-md-3">
+                    photo
                     </div><!--end col lg 4 col md 4-->
                 </div><!--end row-->
             </div> <!--end container-->
