--- a/index.html
+++ b/index.html
@@ -209,21 +209,47 @@
                     </div><!--end col lg 12-->
                 </div><!--end row-->
                 <div class="row">
-                    <div class="col-lg-3 col-md-3" style="margin-right:20px;">
+                    <div class="col-lg-3 col-md-3">
                         <a href="images/finals/Treehouse.jpg">
                             <img src="images/finals/Treehouse.jpg" />
                         </a>
                     </div><!--end col lg 4 col md 4-->
                     <div class="col-lg-3 col-md-3">
-                        <a href="images/finals/DSC_0066.jpg">
-                            <img src="images/finals/DSC_0066.jpg" />
+                        <a href="images/finals/Treehouse.jpg">
+                            <img src="images/finals/Treehouse.jpg" />
                         </a>
                     </div><!--end col lg 4 col md 4-->
                     <div class="col-lg-3 col-md-3">
-                    photo
+                        <a href="images/finals/Treehouse.jpg">
+                            <img src="images/finals/Treehouse.jpg" />
+                        </a>
                     </div><!--end col lg 4 col md 4-->
                     <div class="col-lg-3 col-md-3">
-                    photo
+                        <a href="images/finals/Treehouse.jpg">
+                            <img src="images/finals/Treehouse.jpg" />
+                        </a>
+                    </div><!--end col lg 4 col md 4-->
+                </div><!--end row-->
+                <div class="row" style="margin-top:10px;">
+                    <div class="col-lg-3 col-md-3">
+                        <a href="images/finals/Treehouse.jpg">
+                            <img src="images/finals/Treehouse.jpg" />
+                        </a>
+                    </div><!--end col lg 4 col md 4-->
+                    <div class="col-lg-3 col-md-3">
+                        <a href="images/finals/Treehouse.jpg">
+                            <img src="images/finals/Treehouse.jpg" />
+                        </a>
+                    </div><!--end col lg 4 col md 4-->
+                    <div class="col-lg-3 col-md-3">
+                        <a href="images/finals/Treehouse.jpg">
+                            <img src="images/finals/Treehouse.jpg" />
+                        </a>
+                    </div><!--end col lg 4 col md 4-->
+                    <div class="col-lg-3 col-md-3">
+                        <a href="images/finals/Treehouse.jpg">
+                            <img src="images/finals/Treehouse.jpg" />
+                        </a>
                     </div><!--end col lg 4 col md 4-->
                 </div><!--end row-->
             </div> <!--end container-->
