--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <img src="images/finals/iStock_000014327628Small.jpg" />
                     </div><!--end col lg 4 col md 4-->
                      <div class="col-lg-2 col-md-2">
-                        <h4>Painting</h4>
+                        <h4>Acrylic Painting</h4>
                         <img src="images/finals/painting.jpg" />
                     </div><!--end col lg 4 col md 4-->
                     <div class="col-lg-2 col-md-2">
@@ -180,7 +180,7 @@
                     <div class="col-lg-4 col-md-4">
                         <i class="fa fa-briefcase icon"></i>
                         <h3 class="title-features">No W*rk talk</h3>
-                        <p>We want you to have the freedom to be yourself, not your job or your career. This is not a networking conference. This is your chance to get to know people for who they really are and build relationships with people you can truly call your friend .</p>
+                        <p>We want you to have the freedom to be yourself, not your job or your career. This is your chance to get to know people for who they really are and build relationships with people you can truly call your friend .</p>
                     </div><!--end col lg 4 col md 4-->
 
                     <div class="col-lg-4 col-md-4">
@@ -205,7 +205,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 service-spacer">
-                        <h2>Cabins</h2>
+                        <h2>Cabins & Campground</h2>
                     </div><!--end col lg 12-->
                 </div><!--end row-->
                 <div class="row">
@@ -215,13 +215,13 @@
                         </a>
                     </div><!--end col lg 4 col md 4-->
                     <div class="col-lg-3 col-md-3">
-                        <a href="images/finals/Treehouse.jpg">
-                            <img src="images/finals/Treehouse.jpg" />
+                        <a href="images/finals/Meadow.jpg">
+                            <img src="images/finals/Meadow.jpg" height="167px;" />
                         </a>
                     </div><!--end col lg 4 col md 4-->
                     <div class="col-lg-3 col-md-3">
-                        <a href="images/finals/Treehouse.jpg">
-                            <img src="images/finals/Treehouse.jpg" />
+                        <a href="images/finals/DSCF0609.jpg">
+                            <img src="images/finals/DSCF0609.jpg" height="167px;" />
                         </a>
                     </div><!--end col lg 4 col md 4-->
                     <div class="col-lg-3 col-md-3">
@@ -349,7 +349,7 @@
                     </div><!--end col lg 4 col md 4-->
                     <div class="col-lg-4 col-md-4">
                         <h3>Can I bring an animal?</h3>
-                        <p>Service animals are welcome. Please let us know in advance.</p>
+                        <p>Service animals are welcome.</p>
                     </div><!--end col lg 4 col md 4-->
                     <div class="col-lg-4 col-md-4">
                         <h3>What airport is closest to you?</h3>
