--- a/index.html
+++ b/index.html
@@ -209,46 +209,36 @@
                     </div><!--end col lg 12-->
                 </div><!--end row-->
                 <div class="row">
-                    <div class="col-lg-3 col-md-3">
+                    <div class="col-lg-4 col-md-4">
                         <a href="images/finals/Treehouse.jpg">
                             <img src="images/finals/Treehouse.jpg" />
                         </a>
                     </div><!--end col lg 4 col md 4-->
-                    <div class="col-lg-3 col-md-3">
+                    <div class="col-lg-4 col-md-4">
                         <a href="images/finals/Meadow.jpg">
                             <img src="images/finals/Meadow.jpg" height="167px;" />
                         </a>
                     </div><!--end col lg 4 col md 4-->
-                    <div class="col-lg-3 col-md-3">
+                    <div class="col-lg-4 col-md-4">
                         <a href="images/finals/DSCF0609.jpg">
                             <img src="images/finals/DSCF0609.jpg" height="167px;" />
                         </a>
                     </div><!--end col lg 4 col md 4-->
-                    <div class="col-lg-3 col-md-3">
-                        <a href="images/finals/Treehouse.jpg">
-                            <img src="images/finals/Treehouse.jpg" />
-                        </a>
-                    </div><!--end col lg 4 col md 4-->
                 </div><!--end row-->
                 <div class="row" style="margin-top:10px;">
-                    <div class="col-lg-3 col-md-3">
-                        <a href="images/finals/Treehouse.jpg">
-                            <img src="images/finals/Treehouse.jpg" />
+                    <div class="col-lg-4 col-md-4">
+                        <a href="images/finals/cabin.jpg">
+                            <img src="images/finals/cabin.jpg" height="167px;"/>
                         </a>
                     </div><!--end col lg 4 col md 4-->
-                    <div class="col-lg-3 col-md-3">
-                        <a href="images/finals/Treehouse.jpg">
-                            <img src="images/finals/Treehouse.jpg" />
+                    <div class="col-lg-4 col-md-4">
+                        <a href="images/finals/inside.jpg">
+                            <img src="images/finals/inside.jpg" height="167px;"/>
                         </a>
                     </div><!--end col lg 4 col md 4-->
-                    <div class="col-lg-3 col-md-3">
-                        <a href="images/finals/Treehouse.jpg">
-                            <img src="images/finals/Treehouse.jpg" />
-                        </a>
-                    </div><!--end col lg 4 col md 4-->
-                    <div class="col-lg-3 col-md-3">
-                        <a href="images/finals/Treehouse.jpg">
-                            <img src="images/finals/Treehouse.jpg" />
+                    <div class="col-lg-4 col-md-4">
+                        <a href="images/finals/inside2.jpg">
+                            <img src="images/finals/inside2.jpg" height="167px;"/>
                         </a>
                     </div><!--end col lg 4 col md 4-->
                 </div><!--end row-->
