--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="newsletter-box">
                                 <h2>Sign up for more information</h2>
-                                <p>We will email you when registration opens.  Space will be limited as we will have only 50 spots for our inaugural camp.  We look forward to (dis)connecting with you!
+                                <p>We will email you when registration opens.  Space will be limited as we will have only 50 spots for our inaugural camp.  We look forward to (dis) connecting with you!
                                     <br />Contact: <a href="mailto:Arian@campunpluggd.com">Arian@campunpluggd.com </a></p>
                                 <div class="row">
                                     <div class="col-lg-8 col-lg-offset-2" id="mc_embed_signup">
@@ -375,7 +375,7 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="newsletter-box">
                                 <h2>Sign up for more information</h2>
-                                <p>We will email you when registration opens.  Space will be limited as we will have only 50 spots for our inaugural camp.  We look forward to (dis)connecting with you!
+                                <p>We will email you when registration opens.  Space will be limited as we will have only 50 spots for our inaugural camp.  We look forward to (dis) connecting with you!
                                     <br />Contact: <a href="mailto:Arian@campunpluggd.com">Arian@campunpluggd.com </a></p>
                                 <div class="row">
                                     <div class="col-lg-8 col-lg-offset-2" id="mc_embed_signup">
@@ -418,6 +418,11 @@
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     <h4 class="modal-title" id="myModalLabel">Camp Unplugg'd Talent Form</h4>
+                    <div>
+                        We love campers who have special skills and want to
+contribute! When you register for camp, we will contact you
+about sharing your talent with us. Most of these positions will be volunteer and sessions will be 1 hour long.
+                    </div>
                   </div>
                   <div class="modal-body">
                     <!-- Begin MailChimp Signup Form -->
