--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <div class="col-md-12">
                             <h1 class="brand-heading animated bounceInDown delay1">Camp <span>Unplugg'd</span></h1>
                             <span class="bar animated fadeIn delay2"></span>
-                            <p class="intro-text animated bounceInUp delay2">A weekend getaway off the grid and free from technology. <br />Ready to unplug?</p>
+                            <p class="intro-text animated bounceInUp delay2">A weekend getaway off the grid and free from technology. <br />Ready to unplug?<br /><br />August 22-August 25 2014</p>
                             <div class="page-scroll animated fadeIn delay25">
                                 <a href="#activities" class="btn btn-circle animated pulse delay3">
                                     <i class="fa fa-angle-double-down"></i>
@@ -260,7 +260,7 @@
                     <div class="col-lg-4 col-md-4">
                         <h3>What are the camp dates?<br /></h3>
                         <br />
-                        <p>Our first camp session is scheduled for August 2014. It will be Friday afternoon through Monday morning.
+                        <p>Our first camp session is scheduled for August 2014 (August 22-August 25 2014.). It will be Friday afternoon through Monday morning.
                         </p>
                     </div><!--end col lg 4 col md 4-->
                     <div class="col-lg-4 col-md-4">
